Changed minimum width for the chart modules on the main dashboard to prevent clipping of numerical indices on the gauge charts.

--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -16,7 +16,7 @@
 .card {
   background-color: var(--tertiary);
   padding: 1rem;
-  min-width: 15rem;
+  min-width: 19rem;
   min-height: 18rem;
   max-height: 18rem;
   flex: auto;
